--- a/public/index.html
+++ b/public/index.html
@@ -7,22 +7,6 @@
 
   </head>
   <body>
-    <script src="https://www.gstatic.com/firebasejs/4.12.1/firebase.js"></script>
-    <script>
-      // Initialize Firebase
-      var config = {
-        apiKey: "AIzaSyAGocayAMdpzxz17dLWbfxb6v_2IGqLPbw",
-        authDomain: "uflow-b640f.firebaseapp.com",
-        databaseURL: "https://uflow-b640f.firebaseio.com",
-        projectId: "uflow-b640f",
-        storageBucket: "uflow-b640f.appspot.com",
-        messagingSenderId: "889611883337"
-      };
-      firebase.initializeApp(config);
-    </script>
-    <script src="index.js">
-
-    </script>
-    <!--<div id="root"></div>-->
+      <div id="root"></div>
   </body>
 </html>
